minor improvements + bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="keywords"
-      content="Pomodoify, Pomodoro, Timer, Productivity, Tracking, Achievements, Gamify, Badges"
+      content="Pomodoify, Pomodoro, Timer, Productivity, Tracking, Achievements, Gamify, Badges, Progression"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
